--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html --no-source-maps --no-cache"
+    "build": "parcel build src/index.html --no-source-maps --no-cache --no-minify"
   },
   "babel": {
     "presets": [
