--- a/package.json
+++ b/package.json
@@ -1,31 +1,22 @@
 {
   "name": "dice",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html",
     "build": "parcel build src/index.html --no-source-maps --no-cache --no-minify"
   },
-  "babel": {
-    "presets": [
-      "@babel/preset-react"
-    ]
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/anandgraves/dice.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/anandgraves/dice/issues"
   },
   "homepage": "https://github.com/anandgraves/dice#readme",
   "devDependencies": {
     "@babel/core": "^7.8.7",
-    "@babel/preset-react": "^7.8.3",
     "parcel-bundler": "^1.12.5"
   },
   "dependencies": {
